cmake_minimum_required(VERSION 3.17)
project(OOP)
set(CMAKE_CXX_STANDARD 20)
add_subdirectory(libs/gtest)
include_directories(libs/gtest/googletest/include)
include_directories(libs/gtest/googlemock/include)
set(BOOST_ROOT "libs/boost_1_67_0")
set(BOOSTROOT "libs/boost_1_67_0")
find_package(Boost 1.67.0)
set(Boost_INCLUDE_DIR libs/boost_1_67_0/)
set(Boost_LIBRARY_DIR libs/boost_1_67_0/stage/lib)
include_directories(${Boost_INCLUDE_DIR})
link_directories(${Boost_LIBRARY_DIR})
add_executable(lab1 lab1/tests/TestMatrix.cpp)
add_executable(lab2 lab2/main.cpp lab2/include/Figure.h lab2/src/Triangle.cpp lab2/src/Rectangle.cpp lab2/include/Rectangle.h lab2/src/Square.cpp lab2/include/Square.h lab2/src/Circle.cpp lab2/tests/testFigures.cpp)
add_executable(lab3 lab3/main.cpp lab3/src/PhoneBook.cc lab3/include/PhoneBook.h lab3/tests/testPhoneBook.cpp)
add_executable(lab4+5 lab4+5/src/ShapeAccumulator.cc lab4+5/include/ShapeAccumulator.h lab4+5/main.cpp lab2/src/Square.cpp lab2/src/Circle.cpp lab2/src/Triangle.cpp lab2/src/Rectangle.cpp lab4+5/tests/testShapeAccumulator.cpp)
target_link_libraries(lab1 gtest gtest_main)
target_link_libraries(lab2 gtest gtest_main)
target_link_libraries(lab3 gtest gtest_main)
target_link_libraries(lab4+5 gtest gtest_main)
